terraform/.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    host: demo.ca
    http:
      paths:
        backend:
          service:
            name: demo
            port: 80
        path: /
        pathType: Prefix
